# sped

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
sped-app/: Cargo.toml
sped-app/src/: main.rs
sped-lib/: Cargo.toml
sped-lib/src/: lib.rs
src/: lib.rs
tests/: test.rs
